apppython/k8s/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: apppython-minikube-rollout
spec:
  replicas: 5
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: {duration: 20s}
        - setWeight: 50
        - pause: {duration: 20s}
        - setWeight: 100
  selector:
    matchLabels:
      app: apppython-minikube-rollout
  template:
    metadata:
      labels:
        app: apppython-minikube-rollout
    spec:
      restartPolicy: Always
      containers:
        - name: apppython-minikube-rollout
          image: garrijuan/test_api_python:2566a4c
          ports:
            - containerPort: 80
