apppython/k8s/canary-service.yml
apiVersion: v1
kind: Service
metadata:
  name: apppython-minikube
  namespace: staging
spec:
  selector:
    app: apppython-minikube
    #rollouts-pod-template-hash: <stable-revision> # Asegúrate de reemplazar esto con la etiqueta correcta
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
    name: apppython-port 
  type: ClusterIP
