apppython/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appphyton-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx #sin esta anotacion eks no asocia ALB a el ingress del cluster
  rules:
    - http:
        paths:
          - path: /api/test/?(.*)
            pathType: Prefix
            backend:
              service:
                name: apppython
                port:
                  number: 8081
